# master-bot

./: .dockerignore  .env.example  .env.test  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/api/: admin.py  control.py  deps.py  health.py  max_webhook.py  shared.py  superapp.py  v1.py
app/bot/: app.py  keyboards.py  messages.py  middleware.py  ui.py
app/core/: audit.py  (+4 more)
deploy/: nginx.conf  setup.sh
docs/: architecture.md  catalog_market_research_2026-03-26_security_smart_home.md  db_schema.md  deploy_pridel.md  miniapp_superapp_rfc.md  modules.md  permissions.md
migrations/: env.py
scripts/: build_catalog_bundle.py  build_manual_extensions_security_smart_home.py  catalog_bundle.py  catalog_tree.py  import_catalog.py  import_catalog_bundle.py  import_it_catalog.py  manual_catalog_extensions.py  seed.py
tests/: conftest.py  test_admin_catalog_keyboard.py  test_ai_intake.py  test_api_v1.py  test_bot_keyboards.py  test_catalog_admin.py  test_catalog_bundle.py  test_commission.py  test_control_center.py  test_discount_logic.py  test_events.py  test_export_pdf.py  test_handler_regressions.py  test_hierarchy.py  test_max_webhook.py  test_module_registry.py  test_notifications.py  test_order.py  test_payment_qr.py  test_pricing.py  test_rbac.py  test_selection_rules.py  test_session_auth.py  test_suggestion_logic.py  test_superapp.py  test_workspace.py
(+634 files in other folders)
